unit prefs fixes, visibility field, CT score
Unit prefs include more user info: professional affil, etc. CT score
validation

--- a/sp_theme/css/styles.css
+++ b/sp_theme/css/styles.css
@@ -464,6 +464,15 @@ fieldset.group-stability {
 	width: 46%;
 	
 }
+/*
+//  A brutish way to hide the 'Mountain Range' dropdown on the user profile edit form
+*/
+#user-profile-form .field-name-field-loaction .form-type-cshs div:nth-child(4)
+/*,#user-profile-form .field-name-field-loaction.field-widget-taxonomy-hs .hierarchical-select .selects select:nth-of-type(2)*/
+{
+	display: none;
+}
+*/
 
 /*
 fieldset.group-location,
